Correct inverted expand/collapse text in accordion header (#65)
* Correct inverted expand/collapse text in accordion header

also make HeadingLevel a shared type

* tweak table styles

* PRettier

--- a/src/components/Accordion/_index.scss
+++ b/src/components/Accordion/_index.scss
@@ -19,11 +19,11 @@
   }
 
   .oec-accordion__heading-title {
+    @include u-font('body', 'lg');
+
     * {
       margin: 0;
     }
-
-    font-size: x-large;
   }
 
   .oec-accordion__heading-expand {
@@ -44,7 +44,6 @@
 
   .oec-accordion__content[aria-hidden='true'] {
     display: none;
-
     + .oec-accordion__heading {
       border-top: none;
     }
